crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__ipython_escape_command_line_continuation_with_mac_eol_and_eof.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: ipython_escape_command_line_continuation_with_eol_and_eof(MAC_EOL)
---
## Tokens
```
[
    (
        IpyEscapeCommand,
        0..14,
    ),
    (
        Newline,
        14..14,
    ),
]
```
