crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__line_continuation_at_eof_after_newline_mac_eol.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: line_continuation_at_eof_after_newline(MAC_EOL)
---
## Tokens
```
[
    Unknown 0..2,
]
```
## Errors
```
[
    LexicalError {
        error: Eof,
        location: 0..2,
    },
]
```
